# SpaceLab

./: .gitignore  README.md  pyproject.toml  run_simulation.bat  run_simulation.py
examples/: basic_orbit.py
src/solar_system/: main.py  simulation.py
src/solar_system/bodies/: celestial_body.py  custom_body.py  earth.py  moon.py  satellite.py
src/solar_system/config/: settings.py
src/solar_system/graphics/: __init__.py  renderer.py  startup_menu.py
src/solar_system/physics/: collision.py
src/solar_system/scenarios/: __init__.py  predefined_systems.py
src/spacelab/: main.py  simulation.py
src/spacelab/audio/: __init__.py  audio_manager.py
src/spacelab/bodies/: celestial_body.py  impact_marker.py
src/spacelab/config/: __init__.py  settings.py  settings_manager.py
src/spacelab/graphics/: input_dialog.py  renderer.py  startup_menu.py
src/spacelab/physics/: __init__.py  collision.py  gravity.py
src/spacelab/scenarios/: predefined_systems.py
src/spacelab/utils/: math_helpers.py
