[project]
name = "solar-system"
version = "0.1.0"
description = ""
authors = [
    {name = "TravisAllen24",email = "travis24@tamu.edu"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy (>=2.3.2,<3.0.0)",
    "pygame (>=2.5.0,<3.0.0)",
    "pylint (>=3.3.7,<4.0.0)"
]

[tool.poetry]
packages = [{include = "solar_system", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
